<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="kr.pnu.ga2019.presentation.personal.PersonalPathViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/map_root_layout"
            android:layout_width="0dp"
            android:layout_height="300dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:id="@+id/image_view_map"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:src="@drawable/map_image_1"
                android:scaleType="centerCrop"
                android:contentDescription="@string/image_view_map_description"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/image_view_point"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="@id/map_root_layout"
            app:layout_constraintStart_toStartOf="@id/map_root_layout"
            app:layout_constraintEnd_toEndOf="@id/map_root_layout"
            app:layout_constraintBottom_toBottomOf="@id/map_root_layout">

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/user_path_recyclerview"
            setUserPath="@{viewModel.visitors}"
            setPersonEnter="@{viewModel.person}"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/map_root_layout"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/restart_button"
            android:layout_width="112dp"
            android:layout_height="40dp"
            android:onClick="@{() -> viewModel.restart()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:cardElevation="0dp"
            app:cardBackgroundColor="@android:color/holo_orange_light">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:text="@string/text_view_restart_dispose"
                android:textSize="20dp"
                android:textColor="@color/colorBlack"
                tools:ignore="SpUsage" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/stop_button"
            android:layout_width="112dp"
            android:layout_height="40dp"
            android:onClick="@{() -> viewModel.stop()}"
            app:layout_constraintBottom_toTopOf="@id/restart_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:cardElevation="0dp"
            app:cardBackgroundColor="@android:color/holo_red_light">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:text="@string/text_view_stop_dispose"
                android:textSize="20dp"
                android:textColor="@color/colorBlack"
                tools:ignore="SpUsage" />

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
